Remove unnecessary test rules
Signed-off-by: Taylor Smock <tsmock@meta.com>